--- a/omnichannel-backend/Dockerfile
+++ b/omnichannel-backend/Dockerfile
@@ -1,47 +1,42 @@
-# Use uma imagem base do PHP com Apache
-FROM php:7.4-apache
+# Define a imagem base
+FROM php:7.4
 
+# Atualiza a lista de pacotes e instala dependências adicionais
+RUN apt-get update && apt-get install -y \
+    libzip-dev \
+    zip \
+    unzip \
+    && rm -r /var/lib/apt/lists/*
+
+# Habilita as extensões PHP necessárias
+RUN docker-php-ext-install pdo_mysql zip
+
+# # Copia os arquivos do aplicativo para o diretório de trabalho no contêiner
+COPY . /var/www/html
+
+RUN chown -R www-data:www-data /var/www/html
+RUN chmod -R 755 /var/www/html/storage
+
+# # Define o diretório de trabalho
 WORKDIR /var/www/html
 
-RUN sudo chown -R www-data:www-data /var/www/html/public
-RUN sudo find /var/www/html/public -type f -exec chmod 644 {} \;
-RUN sudo find /var/www/html/public -type d -exec chmod 755 {} \;
-RUN sudo chgrp -R www-data /var/www/html/storage/
+# Instala as dependências do Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-COPY . .
+# Executa o comando Composer para instalar as dependências do aplicativo
+RUN composer install --no-scripts --no-autoloader
 
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    libpng-dev \
-    libonig-dev \
-    libxml2-dev \
-    zip \
-    unzip
-
-# Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-#Install PHP extensions
-RUN docker-php-ext-install pdo_mysql 
-
-# Get latest Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-#Copiar o arquivo de configuração do Apache
-COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
-
-#Habilitar o mod_rewrite do Apache
-RUN a2enmod rewrite
-
-RUN composer global require laravel/installer
-
+# Gera o arquivo .env com as configurações necessárias
 RUN php artisan key:generate
 
-# Expor a porta do servidor web do Apache
-EXPOSE 80
+# Gera as classes de autoload do Composer
+RUN composer dump-autoload
 
+# Expõe a porta em que o servidor Laravel estará ouvindo
+EXPOSE 8000
 
-CMD ["apache2-foreground"]
+# Define o comando padrão a ser executado quando o contêiner for iniciado
+CMD php artisan serve --host=0.0.0.0 --env=.env
 
-RUN php artisan serve
+# php artisan config:clear;
+# php artisan migrate
